# data-science-project-template

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/dstemplate/: main.py
src/dstemplate/utils/: __init__.py  create_data_directory.py  create_docs_folder.py  create_license_file.py  create_model_folder.py  create_notebooks_folder.py  create_readme_file.py  create_reference_folder.py  create_reports_directory.py  create_src_directory.py
tests/: conftest.py  test_create_docs_folder.py  test_create_model_folder.py  test_create_notebooks_folder.py  test_create_readme_and_license.py  test_create_reference_folder.py  test_create_reports_directory.py  test_create_src_directory.py
