[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dstemplate"
version = "0.1.0"
description = "Data Science / Machine Learning project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Seu Nome", email = "seu@email.com" }
]

keywords = ["data-science", "machine-learning", "ml"]

dependencies = []

[project.scripts]
dstemplate = "dstemplate.main:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "ipykernel",
]


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 88
target-version = ["py310"]


[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E203", "E266", "E501"]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]